RESOLVED FIXED284493
REGRESSION(287648@main): [macOS wk2 Debug] imported/blink/fast/hidpi/border-background-align.html is a constant crash (flaky in EWS)
https://bugs.webkit.org/show_bug.cgi?id=284493
Summary REGRESSION(287648@main): [macOS wk2 Debug] imported/blink/fast/hidpi/border-b...
Marta Darbinyan
Reported 2024-12-11 14:55:53 PST
The following test is crashing constantly in macOS Debug queue and also flaky in EWS. imported/blink/fast/hidpi/border-background-align.html The regression started after 287648@main. Crash logs: Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.WebCore 0x300002e50 WTFCrashWithInfo(int, char const*, char const*, int) 1 com.apple.WebCore 0x306843b48 void WebCore::RenderLayer::recursiveUpdateLayerPositions<(WebCore::RenderLayer::UpdateLayerPositionsMode)1>(unsigned int, WTF::OptionSet<WebCore::RenderLayer::UpdateLayerPositionsFlag>, WebCore::RenderLayer::CanUseSimplifiedRepaintPass)::'lambda'(bool)::operator()(bool) const 2 com.apple.WebCore 0x306842bc8 void WebCore::RenderLayer::recursiveUpdateLayerPositions<(WebCore::RenderLayer::UpdateLayerPositionsMode)1>(unsigned int, WTF::OptionSet<WebCore::RenderLayer::UpdateLayerPositionsFlag>, WebCore::RenderLayer::CanUseSimplifiedRepaintPass) 3 com.apple.WebCore 0x3068432cc void WebCore::RenderLayer::recursiveUpdateLayerPositions<(WebCore::RenderLayer::UpdateLayerPositionsMode)1>(unsigned int, WTF::OptionSet<WebCore::RenderLayer::UpdateLayerPositionsFlag>, WebCore::RenderLayer::CanUseSimplifiedRepaintPass) 4 com.apple.WebCore 0x3068432cc void WebCore::RenderLayer::recursiveUpdateLayerPositions<(WebCore::RenderLayer::UpdateLayerPositionsMode)1>(unsigned int, WTF::OptionSet<WebCore::RenderLayer::UpdateLayerPositionsFlag>, WebCore::RenderLayer::CanUseSimplifiedRepaintPass) 5 com.apple.WebCore 0x30680fb14 void WebCore::RenderLayer::recursiveUpdateLayerPositions<(WebCore::RenderLayer::UpdateLayerPositionsMode)0>(unsigned int, WTF::OptionSet<WebCore::RenderLayer::UpdateLayerPositionsFlag>, WebCore::RenderLayer::CanUseSimplifiedRepaintPass) 6 com.apple.WebCore 0x30680f8e0 WebCore::RenderLayer::updateLayerPositionsAfterStyleChange() 7 com.apple.WebCore 0x3059cecf0 WebCore::LocalFrameView::updateCompositingLayersAfterStyleChange() 8 com.apple.WebCore 0x30480a9bc WebCore::Document::resolveStyle(WebCore::Document::ResolveStyleType) 9 com.apple.WebCore 0x30480b4cc WebCore::Document::updateStyleIfNeeded() 10 com.apple.WebCore 0x30480b8c0 WebCore::Document::updateLayout(WTF::OptionSet<WebCore::LayoutOptions>, WebCore::Element const*) 11 com.apple.WebCore 0x3059e605c WebCore::LocalFrameView::updateLayoutAndStyleIfNeededRecursive(WTF::OptionSet<WebCore::LayoutOptions>) 12 com.apple.WebCore 0x305a547a4 WebCore::Page::layoutIfNeeded(WTF::OptionSet<WebCore::LayoutOptions>) 13 com.apple.WebCore 0x305a551ac WebCore::Page::updateRendering() 14 com.apple.WebKit 0x11d3e3fec WebKit::WebPage::updateRendering() 15 com.apple.WebKit 0x11adaaecc WebKit::RemoteLayerTreeDrawingArea::updateRendering() 16 com.apple.WebKit 0x11adb1840 WebCore::Timer::Timer<WebKit::RemoteLayerTreeDrawingArea, WebKit::RemoteLayerTreeDrawingArea>(WebKit::RemoteLayerTreeDrawingArea&, void (WebKit::RemoteLayerTreeDrawingArea::*)())::'lambda'()::operator()() const 17 com.apple.WebKit 0x11adb1778 WTF::Detail::CallableWrapper<WebCore::Timer::Timer<WebKit::RemoteLayerTreeDrawingArea, WebKit::RemoteLayerTreeDrawingArea>(WebKit::RemoteLayerTreeDrawingArea&, void (WebKit::RemoteLayerTreeDrawingArea::*)())::'lambda'(), void>::call() 18 com.apple.WebKit 0x11a08a2d4 WTF::Function<void ()>::operator()() const 19 com.apple.WebKit 0x11adafd04 WebCore::Timer::fired() 20 com.apple.WebCore 0x305d501b0 WebCore::ThreadTimers::sharedTimerFiredInternal() 21 com.apple.WebCore 0x305d5a1d4 WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0::operator()() const 22 com.apple.WebCore 0x305d5a180 WTF::Detail::CallableWrapper<WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0, void>::call() 23 com.apple.WebCore 0x300030100 WTF::Function<void ()>::operator()() const 24 com.apple.WebCore 0x305cfad60 WebCore::MainThreadSharedTimer::fired() 25 com.apple.WebCore 0x305e4fdd8 WebCore::timerFired(__CFRunLoopTimer*, void*) 26 com.apple.CoreFoundation 0x19ed54184 __CFRUNLOOP_IS_CALLING_OUT_TO_A_TIMER_CALLBACK_FUNCTION__ + 32 /AppleInternal/Library/BuildRoots/3a242bc5-6bec-11ef-af1c-daac7d5d70b1/Library/Caches/com.apple.xbs/Sources/CoreFoundation/CoreFoundation/RunLoop.subproj/CFRunLoop.c:1790 27 com.apple.CoreFoundation 0x19ed53e28 __CFRunLoopDoTimer + 1012 /AppleInternal/Library/BuildRoots/3a242bc5-6bec-11ef-af1c-daac7d5d70b1/Library/Caches/com.apple.xbs/Sources/CoreFoundation/CoreFoundation/RunLoop.subproj/CFRunLoop.c:2397 28 com.apple.CoreFoundation 0x19ed53938 __CFRunLoopDoTimers + 356 /AppleInternal/Library/BuildRoots/3a242bc5-6bec-11ef-af1c-daac7d5d70b1/Library/Caches/com.apple.xbs/Sources/CoreFoundation/CoreFoundation/RunLoop.subproj/CFRunLoop.c:2555 29 com.apple.CoreFoundation 0x19ed390f0 __CFRunLoopRun + 1856 /AppleInternal/Library/BuildRoots/3a242bc5-6bec-11ef-af1c-daac7d5d70b1/Library/Caches/com.apple.xbs/Sources/CoreFoundation/CoreFoundation/RunLoop.subproj/CFRunLoop.c:3116 30 com.apple.CoreFoundation 0x19ed38334 CFRunLoopRunSpecific + 572 /AppleInternal/Library/BuildRoots/3a242bc5-6bec-11ef-af1c-daac7d5d70b1/Library/Caches/com.apple.xbs/Sources/CoreFoundation/CoreFoundation/RunLoop.subproj/CFRunLoop.c:3414 31 com.apple.Foundation 0x19fef6918 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] + 212 /AppleInternal/Library/BuildRoots/3a242bc5-6bec-11ef-af1c-daac7d5d70b1/Library/Caches/com.apple.xbs/Sources/Foundation/Foundation/Soil.subproj/NSRunLoop.m:373 32 com.apple.Foundation 0x19ff6e264 -[NSRunLoop(NSRunLoop) run] + 64 /AppleInternal/Library/BuildRoots/3a242bc5-6bec-11ef-af1c-daac7d5d70b1/Library/Caches/com.apple.xbs/Sources/Foundation/Foundation/Soil.subproj/NSRunLoop.m:398 33 libxpc.dylib 0x19e96a788 _xpc_objc_main + 700 /AppleInternal/Library/BuildRoots/cb912154-53fd-11ef-bee5-ba7355c93fd5/Library/Caches/com.apple.xbs/Sources/libxpc/src/main.m:267 34 libxpc.dylib 0x19e97a894 _xpc_main + 276 /AppleInternal/Library/BuildRoots/cb912154-53fd-11ef-bee5-ba7355c93fd5/Library/Caches/com.apple.xbs/Sources/libxpc/src/init.c:1291 35 libxpc.dylib 0x19e96a324 xpc_main + 64 /AppleInternal/Library/BuildRoots/cb912154-53fd-11ef-bee5-ba7355c93fd5/Library/Caches/com.apple.xbs/Sources/libxpc/src/init.c:1374 36 com.apple.WebKit 0x11b5c39c4 WebKit::XPCServiceMain(int, char const**) 37 com.apple.WebKit 0x11e053778 WKXPCServiceMain 38 com.apple.WebKit.WebContent 0x1042aff90 main 39 dyld 0x19e8d0274 start + 2840 /AppleInternal/Library/BuildRoots/85cc1810-7a78-11ef-9d23-daac7d5d70b1/Library/Caches/com.apple.xbs/Sources/dyld/dyld/dyldMain.cpp:1334 Test results: https://ews-build.s3-us-west-2.amazonaws.com/macOS-Sequoia-Debug-WK2-Tests-EWS/b8c8ea20-5424-rerun/results.html History: https://results.webkit.org/?suite=layout-tests&test=imported%2Fblink%2Ffast%2Fhidpi%2Fborder-background-align.html&style=debug&flavor=wk2
Attachments
Radar WebKit Bug Importer
Comment 1 2024-12-11 14:56:18 PST
EWS
Comment 2 2024-12-11 15:12:22 PST
Test gardening commit 287699@main (78c8c2d51488): <https://commits.webkit.org/287699@main> Reviewed commits have been landed. Closing PR #37801 and removing active labels.
Simon Fraser (smfr)
Comment 3 2024-12-13 14:29:13 PST
We've cached RepaintRects from when deviceScaleFactor() was 1, and then we are asserting that they are the same as rects computed with deviceScaleFactor() 2.
Simon Fraser (smfr)
Comment 4 2024-12-13 15:12:56 PST
EWS
Comment 5 2024-12-13 21:36:41 PST
Committed 287832@main (005288f3b10c): <https://commits.webkit.org/287832@main> Reviewed commits have been landed. Closing PR #37947 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.