REGRESSION(287648@main): [macOS wk2 Debug] imported/blink/fast/hidpi/border-background-align.html is a constant crash (flaky in EWS) https://bugs.webkit.org/show_bug.cgi?id=284493 rdar://141315960

Reviewed by Alan Baradlay.

This is similar to 287607@main, but for `updateLayerPositionsAfterStyleChange()` instead of
`updateLayerPositionsAfterLayout()`.

We move `updateCompositingLayersAfterStyleChange()` from LocalFrameView to LocalFrameViewLayoutContext
(along the lines of 287568@main), and add a check for a change in repaint rect environment.

* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebCore/dom/Document.cpp:
(WebCore::Document::resolveStyle):
* Source/WebCore/page/LocalFrameView.cpp:
(WebCore::LocalFrameView::updateCompositingLayersAfterStyleChange): Deleted.
* Source/WebCore/page/LocalFrameView.h:
* Source/WebCore/page/LocalFrameViewLayoutContext.cpp:
(WebCore::LocalFrameViewLayoutContext::updateCompositingLayersAfterStyleChange):
* Source/WebCore/page/LocalFrameViewLayoutContext.h:
* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::updateLayerPositionsAfterStyleChange):
* Source/WebCore/rendering/RenderLayer.h:

Canonical link: https://commits.webkit.org/287832@main